--- a/index.html
+++ b/index.html
@@ -24,17 +24,37 @@
     <!-- Body -->
     <div class="Process">
 
+      <h2>Our Process</h2>
+      <h3>Identify</h3>
+      <p>We focus on the most important details.</p>
+      <h3>Understand</h3>
+      <p>We study our projects inside and out.</p>
+      <h3>Execute</h3>
+      <p>We put everything we have into our work.</p>
+      <p class="tagline">Designed in New York</p>
     </div>
 
     <div class="Work">
 
+      <h3>Portfolio</h3>
+      <p>Coming Soon</p>
     </div>
 
     <div class="Team">
 
+      <h3>Team</h3>
+      <p>We're Hiring!</p>
     </div>
 
     <div class="Contact">
+
+      <h3>Contact</h3>
+      <p>Phone: (555)-555-5555</p>
+      <p>E-mail: test@example.com</p>
+      <p>Twitter: @test</p>
+    </div>
+
+    <div class="footer">
 
     </div>
 
