--- a/index.html
+++ b/index.html
@@ -3,56 +3,64 @@
   <head>
     <meta charset="utf-8">
     <title>Broadway Design</title>
-        <link rel="stylesheet" href="resources/css/style.css">
+        <link rel="stylesheet" href="resources/style.css">
   </head>
   <body>
 
-    <div class="Home">
+    <div id="Home">
       <h1>Broadway Design</h1>
-      <!-- Navigation -->
       <nav>
-        <ul>
-          <li>Home</li>
-          <li>Process</li>
-          <li>Work</li>
-          <li>Team</li>
-          <li>Contact</li>
-        </ul>
+          <li> <a href="#Home">Home</a></li>
+          <li> <a href="#Process">Process</a></li>
+          <li><a href="#Work">Work</a></li>
+          <li><a href="#Team">Team</a></li>
+          <li><a href="#Contact">Contact</a></li>
       </nav>
     </div>
 
     <!-- Body -->
-    <div class="Process">
+
+    <div id="Process">
 
       <h2>Our Process</h2>
+      <p><img src="resources/icons/identify.svg" alt="swirly arrow"> </p>
       <h3>Identify</h3>
-      <p>We focus on the most important details.</p>
+        <p>We focus on the most important details.</p>
+      <p><img src="resources/icons/understand.svg" alt="circular arrow"> </p>
       <h3>Understand</h3>
-      <p>We study our projects inside and out.</p>
+        <p>We study our projects inside and out.</p>
+      <p><img src="resources/icons/execute.svg" alt="straight arrow"> </p>
       <h3>Execute</h3>
-      <p>We put everything we have into our work.</p>
+        <p>We put everything we have into our work.</p>
+
       <p class="tagline">Designed in New York</p>
+
     </div>
 
-    <div class="Work">
+    </div>
+
+    <div id="Work">
 
       <h3>Portfolio</h3>
       <p>Coming Soon</p>
     </div>
 
-    <div class="Team">
+    <div id="Team">
 
       <h3>Team</h3>
       <p>We're Hiring!</p>
     </div>
 
-    <div class="Contact">
+    <div id="Contact">
 
       <h3>Contact</h3>
       <p>Phone: (555)-555-5555</p>
       <p>E-mail: test@example.com</p>
       <p>Twitter: @test</p>
     </div>
+
+
+  <!-- Footer -->
 
     <div class="footer">
 
