--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   </head>
   <body>
 
-    <div id="Home">
       <h1>Broadway Design</h1>
+
+    <div id="Home">
+
       <nav>
           <li> <a href="#Home">Home</a></li>
           <li> <a href="#Process">Process</a></li>
@@ -33,7 +35,7 @@
       <h3>Execute</h3>
         <p>We put everything we have into our work.</p>
 
-      <p class="tagline">Designed in New York</p>
+      <h3 class="tagline">Designed in New York</h3>
 
     </div>
 
