--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
 
       <h1>Broadway Design</h1>
 
-    <div id="Home">
+    <div class="navigation">
 
-      <nav>
-          <li> <a href="#Home">Home</a></li>
-          <li> <a href="#Process">Process</a></li>
-          <li><a href="#Work">Work</a></li>
-          <li><a href="#Team">Team</a></li>
-          <li><a href="#Contact">Contact</a></li>
-      </nav>
+          <p> <a href="#Home">Home</a></p>
+          <p> <a href="#Process">Process</a></p>
+          <p><a href="#Work">Work</a></p>
+          <p><a href="#Team">Team</a></p>
+          <p><a href="#Contact">Contact</a></p>
     </div>
 
     <!-- Body -->
@@ -65,7 +63,14 @@
   <!-- Footer -->
 
     <div class="footer">
-
+      <p>
+              &copy; Broadway 2017
+              <a class="btn-nav" href="#">Home</a>
+              <a class="btn-nav" href="#about">About</a>
+              <a class="btn-nav" href="#work">Work</a>
+              <a class="btn-nav" href="#team">Team</a>
+              <a class="btn-nav" href="#contact">Contact</a>
+        </p>
     </div>
 
 
