--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
         <link rel="stylesheet" href="resources/style.css">
   </head>
   <body>
+<div class="header">
 
-      <h1>Broadway Design</h1>
+  <h1>Broadway Design</h1>
+  <div class="navigation">
 
-    <div class="navigation">
+    <p> <a href="#Home">Home</a></p>
+    <p> <a href="#Process">Process</a></p>
+    <p><a href="#Work">Work</a></p>
+    <p><a href="#Team">Team</a></p>
+    <p><a href="#Contact">Contact</a></p>
+  </div>
+</div>
 
-          <p> <a href="#Home">Home</a></p>
-          <p> <a href="#Process">Process</a></p>
-          <p><a href="#Work">Work</a></p>
-          <p><a href="#Team">Team</a></p>
-          <p><a href="#Contact">Contact</a></p>
-    </div>
 
     <!-- Body -->
 
